# Embedded-system

./: README.md  method.md
Stm32_Project - 电力监测/: stm32_vol_capture.build_log.htm  stm32_vol_capture.uvgui.Administrator  stm32_vol_capture.uvgui_Administrator.bak  stm32_vol_capture.uvopt  stm32_vol_capture.uvproj  stm32_vol_capture_stm32_vol_capture-triphase.dep  stm32_vol_capture_uvopt.bak
Stm32_Project - 电力监测 三相负数/: stm32_vol_capture.uvgui.Administrator  stm32_vol_capture.uvgui_Administrator.bak  stm32_vol_capture.uvopt  stm32_vol_capture.uvproj  stm32_vol_capture_stm32_vol_capture-triphase.dep  stm32_vol_capture_uvopt.bak
Stm32_Project - 电力监测 三相负数/Output/: core_cm3.crf  core_cm3.d  delay.crf  delay.d  gu900.crf  gu900_timer.crf  gu900_uart.crf  gu900_uart.d  main.crf  modbus_timer.crf  modbus_timer.d  rs485.crf  stm32_vol_capture.axf  stm32_vol_capture.build_log.htm  stm32_vol_capture.hex  stm32_vol_capture.htm  stm32_vol_capture.lnp  stm32_vol_capture.map  sys.crf  sys.d  system_stm32f10x.crf  system_stm32f10x.d  (+5 more)
jifang-机房无人值守/: .cproject  .project  gps.c  gps.h  libemqtt.c  libemqtt.h  serial.c
wheelchair_bed/: .ycm_extra_conf.py  wheelchair_bed.workspace.user.b71cb73
wheelchair_bed/src/wheelchair_bed/wheelchair_bed/: package.xml
塘沽二中配电室程序/: stm32_vol_capture.uvgui.Administrator  stm32_vol_capture.uvgui_Administrator.bak  stm32_vol_capture.uvopt  stm32_vol_capture.uvproj  stm32_vol_capture_stm32_vol_capture-triphase.dep  stm32_vol_capture_stm32_vol_capture.dep  stm32_vol_capture_uvopt.bak  stm32_vol_capture_uvproj.bak
智慧工地-升降机/: Thumbs.db  YS-F4Pro.ioc
(+1141 files in other folders)
